# product-qc-ui

./: .pdm-python  Dockerfile  README.md  docker-compose.yml  generate.ipynb  order.ipynb  pyproject.toml  requirements.txt  test.ipynb
src/: argo.py  main.py  pages.py  plot.py  read.py  write.py
tests/fixtures/img0/: metadata.json
tests/fixtures/img1/: metadata.json
tests/fixtures/img10/: metadata.json
tests/fixtures/img11/: metadata.json
tests/fixtures/img12/: metadata.json
tests/fixtures/img13/: metadata.json
tests/fixtures/img2/: metadata.json
tests/fixtures/img3/: metadata.json
tests/fixtures/img4/: metadata.json
tests/fixtures/img5/: metadata.json
tests/fixtures/img6/: metadata.json
tests/fixtures/img7/: metadata.json
tests/fixtures/img8/: metadata.json
tests/fixtures/img9/: metadata.json
tests/template/: metadata.json
