[project]
name = "product-form"
version = "0.1.1"
description = "Default template for PDM package"
authors = [
    {name = "Jonas Berhin", email = "jonas.berhin@gmail.com"},
]
dependencies = [
    "ipykernel>=6.29.2",
    "streamlit>=1.31.1",
    "geojson>=3.1.0",
    "matplotlib>=3.8.3",
    "fsspec>=2024.2.0",
    "s3fs>=2024.2.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.29.4",
    "pytest>=8.0.1",
]
